--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.86.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
